<resources>
    <string name="app_name">uFoodBeFree</string>

    <!-- Auth -->
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="field_required">Field required.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_required">Authentication required for this action</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="status_logged">Logged</string>
    <string name="create_account">Create Account</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="email_none">Email: none</string>

    <!-- Search -->
    <string name="btnDescripcion">Buscar</string>
    <string name="btnTodos">Todos</string>
    <string name="strError">No se ha recuperado ninguna receta</string>
    <string name="txtLastSearches">Búsquedas anteriores</string>

    <!-- Menu -->
    <string name="menuPreviousSearches">Previous searches</string>
    <string name="menuRecipes">Search recipes</string>
    <string name="menuSettings">Settings</string>

    <!-- Preferencias -->
    <string name="prisma_header">Configuración lámpara IoT</string>
    <string name="search_header">Configuración búsqueda recetas</string>
    <string name="ip_title">IP de la lámpara</string>
    <string name="nRecetas_title">Número de resultados máximos</string>
    <string name="prisma_defaultIP">192.168.0.102</string>
    <string name="nRecetas_default">5</string>
</resources>