<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/prisma_header">
        <EditTextPreference
            android:key="ipPrisma"
            android:title="@string/ip_title"
            android:defaultValue="@string/prisma_defaultIP"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/search_header">
        <SeekBarPreference
            android:key="nMaxSearchElements"
            android:title="@string/nRecetas_title"
            app:showSeekBarValue="true"
            android:defaultValue="@string/nRecetas_default"
            app:min="1"
            android:max="10" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>