<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/statusSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:checked="false"
            android:text="@string/status_logged" />

        <TextView
            android:id="@+id/statusEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/statusId"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            tools:text="Email: none" />
    </LinearLayout>

    <TextView
        android:id="@+id/headerEmailPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="8dp"
        android:text="@string/label_emailpassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/fieldEmail"
            android:layout_width="@dimen/field_width_standard"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:hint="@string/hint_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/fieldPassword"
            android:layout_width="@dimen/field_width_standard"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="@dimen/field_width_standard"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="9dp"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/buttonSignOut"
            android:layout_width="@dimen/field_width_standard"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:enabled="false"
            android:text="@string/sign_out" />
    </LinearLayout>

</LinearLayout>